# BruderAlban_119902_Assignment5

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  example.sh
source/: CMakeLists.txt  algorithm.hpp  event.hpp  line.hpp  main.cpp  mergesort.hpp  point.hpp  segment.hpp  set.hpp  tests.cpp  utils.hpp
